# predictive-maintenance-ml

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_baseline_results.ipynb  01_checks.ipynb  01_data_loading_check.py
src/predictive_maintenance_ml/: data_loader.py  evaluation.py  experiment.py  feature_engineering.py  model.py
tests/: test_data_loader.py  test_evaluation.py  test_experiment.py  test_feature_engineering.py  test_model.py
